# DeepPaint

./: .gitignore  README.md  environment.yml  environment_general.yml  pyproject.toml
deep_paint/: __init__.py  __main__.py
deep_paint/lightning/: __init__.py  callback.py  cli.py  datamodule.py  module.py
deep_paint/utils/: __init__.py  compute_metrics.py  config.py  embeddings.py  metadata.py  plot.py  split.py
notebooks/: auprc.ipynb  confusion_matrices.ipynb  embeddings_density_plots.ipynb  embeddings_scatterplots.ipynb  logs.ipynb  metadata.ipynb
results/checkpoints/: binary_rxrx2.ckpt  multiclass_rxrx2.ckpt
results/configs/: binary_rxrx2_embeddings.yaml  binary_rxrx2_predictions.yaml  binary_rxrx2_train.yaml  multiclass_rxrx2_embeddings.yaml  multiclass_rxrx2_predictions.yaml  multiclass_rxrx2_train.yaml
results/logs/: binary-percent-f1.csv  binary-train-f1.csv  binary-train-loss.csv  binary-val-f1.csv  binary-val-loss.csv  multiclass-train-f1.csv  multiclass-train-loss.csv  multiclass-val-f1.csv  multiclass-val-loss.csv
results/metadata/: binary_rxrx2.csv  multiclass_rxrx2.csv  significant_treatments.csv
results/predictions/: binary_rxrx2.csv  multiclass_rxrx2.csv
