[project]
name = "DeepPaint"
version = "1.0.0"
description = "Cell Painting Deep Learning python package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deep_paint", "deep_paint.*"]
namespaces = false